# Chess

./: CMakeLists.txt
res/: mainwindow.ui  resources.qrc
src/: ChessWindow.cpp  ChessWindow.h  main.cpp
